[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.28,<0.10" ]

[project]
name = "keggtools"
version = "1.1.0"

description = "Enrichment analysis and visualisation toolkit for KEGG pathways"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
maintainers = [ { name = "harryhaller001", email = "harryhaller001@gmail.com" } ]
authors = [ { name = "harryhaller001", email = "harryhaller001@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [ "matplotlib", "pandas", "pillow", "pybiomart", "pydantic-xml", "pydot", "requests", "scipy" ]

optional-dependencies.docs = [
    "ipython",                  # Required for syntax highlighing (https://github.com/spatialaudio/nbsphinx/issues/24)
    "nbsphinx",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
]

optional-dependencies.test = [
    "ipykernel",
    "ipython",
    "ipywidgets",
    "isort",
    "pandas-stubs",
    "pytest",
    "pytest-cov>=7",
    "responses",
    "ruff",
    "setuptools",
    "twine",
    "ty>=0.0.16",
    "types-requests",
]
# Project urls
urls.Documentation = "https://keggtools.org/"
urls.Source = "https://github.com/harryhaller001/keggtools"

[tool.ruff]
line-length = 120

format.docstring-code-format = true

lint.select = [ "B", "BLE", "C4", "D", "E", "F", "I", "RUF100", "TID", "UP", "W" ]
lint.ignore = [ "B008", "C408", "D100", "D104", "D105", "D107", "D203", "D213", "D400", "D401", "E501", "E731", "E741" ]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 120
indent = 4
# if false will remove unnecessary trailing ``.0``'s from version specifiers
keep_full_version = false
# maximum Python version to use when generating version specifiers
max_supported_python = "3.14"

[tool.pytest]
ini_options.minversion = "7.0"
ini_options.log_format = "%(asctime)s %(levelname)s %(message)s"
ini_options.log_date_format = "%Y-%m-%d %H:%M:%S"
ini_options.log_level = "INFO"
ini_options.log_cli = true
ini_options.python_files = "test_*.py"
ini_options.testpaths = [ "tests" ]
ini_options.xfail_strict = true
ini_options.addopts = [
    "--import-mode=importlib",           # allow using test files with same name
    "--cov=src/keggtools",
    "--cov-report=html:coverage_report",
    "--cov-report=term",
]

[tool.coverage]
run.omit = [ "*/tests/*" ]
run.source = [ "src/keggtools" ]
report.exclude_lines = [ "raise" ]
report.ignore_errors = true
html.directory = "coverage_report"
